--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,37 @@
 <div class="container">
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container">
-      <a class="navbar-brand" href="/">XPTO Store</a>
+      <a class="navbar-brand" href="/">{{title}}</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDefault"
               aria-controls="navbarDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+
+      <div class="collapse navbar-collapse" id="navbarDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Find Us</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </nav>
 </div>
-<br>
-<h2>{{title}}</h2>
+<main role="main">
+  <div class="container body-content">
+    <br/>
+    <br/>
+    <br/>
+    <app-home></app-home>
+  </div>
+</main>
+
 <footer class="container">
   <hr/>
   <p>&copy; {{ year }} - TPW - Project I</p>
