Fix Project I -> II

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,6 +34,6 @@
 
 <footer class="container">
   <hr/>
-  <p>&copy; {{ year }} - TPW - Project I</p>
+  <p>&copy; {{ year }} - TPW - Project II</p>
 </footer>
 
