--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
           <div class="card-body">
             <h5 class="card-title">{{ item.titulo }}</h5>
             <p class="card-text">{{ item.short }}</p>
-            <a href="/infoItem?titulo={{ item.id }}" class="btn btn-primary">Ver mais</a>
+            <a routerLink="/infoItem/{{ item.id }}" class="btn btn-primary">Ver mais</a>
           </div>
         </div>
       </div>
