revert some changes

--- a/src/app/item-details/item-details.component.html
+++ b/src/app/item-details/item-details.component.html
@@ -1,24 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-9 offset-1">
-      <h1 style="text-align: center">{{ details.titulo }}</h1>
-    </div>
-    <div class="col-lg-1">
-      <form action="addcart" method='post'>
-        <input name='id' value="{{ details.id }}" hidden>
-        <button type="submit" class="btn btn-success"><i class="fa fa-shopping-cart"></i></button>
-      </form>
-
-    </div>
-    <div class="col-lg-1">
-      <form action="buyitem" method='post'>
-        <input name='id' value="{{ details.id }}" hidden>
-        <button type="submit" class="btn btn-success"><i class="fa fa-credit-card"></i></button>
-      </form>
-    </div>
-    <div class="col-lg-12">
-      <h2> {{ details.preco }}€</h2>
-      <h5> {{ details.descricao }}</h5>
-    </div>
-  </div>
-</div>
+<h1> item details </h1>
