Pages without login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,22 @@
 
       <div class="collapse navbar-collapse" id="navbarDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About Us</a>
+            <a class="nav-link" routerLink="about">About Us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Find Us</a>
+            <a class="nav-link" routerLink="contact">Find Us</a>
+          </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Log in</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
           </li>
         </ul>
       </div>
