--- a/src/app/perfil/perfil.component.html
+++ b/src/app/perfil/perfil.component.html
@@ -1,1 +1,57 @@
-<p>perfil works!</p>
+<div class="row" *ngIf="perfil">
+  <div class="col-lg-2">
+    <img [src]='url+ perfil.picture.substring(4, perfil.picture.length)' class="img-responsive img-thumbnail ">
+    <br>
+    <br>
+    <a href="/profileedit" class="btn btn-success"><span
+      class="glyphicon glyphicon-thumbs-up"></span>
+      Editar perfil</a>
+  </div>
+  <div class="col-lg-10 ">
+    <form class="form-horizontal">
+      <div class="form-group">
+        <label class="col-lg-4" for="first_name">Nome</label>
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input id="first_name" name="last_name" type="text"
+                   placeholder="Nome" class="form-control input-lg" value="{{ perfil.first_name }}" readonly >
+          </div>
+        </div>
+        <label class="col-lg-4" for="last_name">Nome</label>
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input id="last_name" name="last_name" type="text"
+                   placeholder="Last Name" class="form-control input-lg" value="{{ perfil.first_name }}" readonly>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-4" for="morada">Morada</label>
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input id="morada" name="morada" type="text"
+                   placeholder="Morada" class="form-control input-lg" value="{{ perfil.morada }}" readonly>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-4" for="zipcode">Código Postal</label>
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input id="zipcode" name="zipcode" type="text"
+                   placeholder="zipcode" class="form-control input-lg" value="{{ perfil.zipcode }}"
+                   readonly>
+          </div>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-4" for="pais">País</label>
+        <div class="col-lg-6">
+          <div class="input-group">
+            <input id="pais" name="pais" type="text"
+                   placeholder="País" class="form-control input-lg" value="{{ perfil.pais }}" readonly>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
