--- a/src/app/cart-partial/cart-partial.component.html
+++ b/src/app/cart-partial/cart-partial.component.html
@@ -1,14 +1,12 @@
 <div class="container">
-  <table *ngFor="let item of products">
+  <table *ngFor="let item of products; let i = index" [attr.data-index]="i">
     <tr>
       <th style="width:100%;" ><a class="dropdown-item">{{ item.titulo }} {{ item.preco }} €</a></th>
-      <form action='/removecart' method='post'>
-        <input name='id' value="{{ item.id }}" hidden>
-        <th>
-          <button type="submit" class="close" aria-label="Close"><span aria-hidden="true">&times;</span>
-          </button>
-        </th>
-      </form>
+      <th>
+        <form (ngSubmit)="onDelete(i)">
+          <button type="submit" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        </form>
+      </th>
     </tr>
   </table>
   <div class="dropdown-divider"></div>
