--- a/src/app/edit-profile/edit-profile.component.html
+++ b/src/app/edit-profile/edit-profile.component.html
@@ -61,7 +61,7 @@
       <div class="form-group">
         <label class="col-md-4 control-label" for="picture">Upload photo</label>
         <div class="col-md-4">
-          <input id="picture" name="picture" class="input-file" type="file" (change)="onFileChanged($event)">
+          <input id="picture" name="picture" class="input-file" type="file">
         </div>
       </div>
 
