--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
                aria-haspopup="true" aria-expanded="false"> {{nome}}
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/profile">Perfil</a>
+              <a class="dropdown-item" href="/perfil">Perfil</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" (click)="Logout()" *ngIf="this.authService.isLoggedIn">Logout</a>
             </div>
