--- a/src/app/listacompras/listacompras.component.html
+++ b/src/app/listacompras/listacompras.component.html
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
     <tr>
-      <td><a href="/infoItem?titulo={{ row.produtos }}">Ver como ter título</a></td>
+      <td><a href="/infoItem?titulo={{ row.produtos }}"></a></td>
       <td>{{ row.quantidade }}</td>
       <td>{{ row.preco }}</td>
       <td>{{ row.total }}</td>
