--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,9 @@
           </li>
         </ul>
         <ul *ngIf="isLoggedIn()" class="nav navbar-nav navbar-right">
+          <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">
+            <a class="nav-link" [routerLink]="['/list']">Encomendas</a>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="cartDropdown" role="button"
                data-toggle="dropdown"
