--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-11 offset-1">
-  <form class="example" action="/search" method="get">
-    <input type="text" placeholder="Search.." name="search">
+  <form class="example" [formGroup]="searchForm" (ngSubmit)="onSearch()">
+    <input type="text" formControlName="search" placeholder="Search.." name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
   <br>
