--- a/src/app/listacompras/listacompras.component.html
+++ b/src/app/listacompras/listacompras.component.html
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
     <tr  *ngFor="let row of compras">
-      <td><a href="/infoItem/{{ row.produtos }}">{{row.produtos}}</a></td>
+      <td><a href="/infoItem/{{ row.prodid }}">{{row.produtos}}</a></td>
       <td>{{ row.quantidade }}</td>
       <td>{{ row.preco }}</td>
       <td>{{ row.total }}</td>
