--- a/src/app/adminlist/adminlist.component.html
+++ b/src/app/adminlist/adminlist.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
-  <form class="example" action="/boughtSearch" method="get">
-    <input type="text" placeholder="Search.." name="search">
+  <form class="example "[formGroup]="searchForm" (ngSubmit)="onSearch()">
+    <input type="text" formControlName="search" placeholder="Search.." name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
 </div>
@@ -20,7 +20,7 @@
     </thead>
     <tbody>
     <tr  *ngFor="let row of compras">
-      <td><a href="/infoItem/{{ row.produtos }}">{{row.produtos}}</a></td>
+      <td><a href="/infoItem/{{ row.prodid }}">{{row.produtos}}</a></td>
       <td>{{ row.quantidade }}</td>
       <td>{{ row.preco }}</td>
       <td>{{ row.total }}</td>
