--- a/src/app/listacompras/listacompras.component.html
+++ b/src/app/listacompras/listacompras.component.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
-  <form class="example" action="/boughtSearch" method="get">
-    <input type="text" placeholder="Search.." name="search">
+  <form class="example "[formGroup]="searchForm" (ngSubmit)="onSearch()">
+    <input type="text" formControlName="search" placeholder="Search.." name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
 </div>
