--- a/src/app/adminpanel/adminpanel.component.html
+++ b/src/app/adminpanel/adminpanel.component.html
@@ -23,7 +23,7 @@
     <td>{{ row.id }}</td>
     <td><a href="/infoItem/{{ row.id }}" target="_blank">{{ row.titulo }}</a></td>
     <td><a href="/edititem/{{ row.id }}" class="btn btn-primary"><i class="fa fa-edit"></i></a></td>
-    <td><a href="/admin/{{ row.id }}" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
+    <td><a (click)="delete(row.id)" class="btn btn-danger"><i class="fa fa-trash"></i></a></td>
   </tr>
   </tbody>
 </table>
